added upload text activity + xml

--- a/24HoursOfFame/app/src/main/res/values/strings.xml
+++ b/24HoursOfFame/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
 
     <string name="app_name">24HoursOfFame</string>
     <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="upload_text">Upload Text</string>
 
 </resources>
